// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LendingClient PTB shape populateBorrowTransactionWithAllAssets — correct package, module, args, recipient 1`] = `
[
  {
    "argumentCount": 3,
    "function": "refresh_usd_price",
    "kind": "MoveCall",
    "module": "user_oracle",
    "package": "0xec244262968307f6b502f28bbf03aed94140e7467d1638b01a29ec5cc43fd769",
    "typeArguments": [
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
    ],
  },
  {
    "argumentCount": 3,
    "function": "refresh_usd_price",
    "kind": "MoveCall",
    "module": "user_oracle",
    "package": "0xec244262968307f6b502f28bbf03aed94140e7467d1638b01a29ec5cc43fd769",
    "typeArguments": [
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "argumentCount": 7,
    "function": "borrow",
    "kind": "MoveCall",
    "module": "borrow",
    "package": "0x45bae0425e9098ce5cba3d3fa2836220ad24c9f88aa0dffffb5a52b49319fc70",
    "typeArguments": [
      "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf::market_type::MainMarket",
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
    ],
  },
  {
    "kind": "TransferObjects",
    "objectCount": 1,
  },
]
`;

exports[`LendingClient PTB shape populateEnterMarketAndDepositTxn — enter + deposit + transferObjects(cap, sender) 1`] = `
[
  {
    "argumentCount": 2,
    "function": "enter_market_return",
    "kind": "MoveCall",
    "module": "enter_market",
    "package": "0x45bae0425e9098ce5cba3d3fa2836220ad24c9f88aa0dffffb5a52b49319fc70",
    "typeArguments": [
      "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf::market_type::MainMarket",
    ],
  },
  {
    "argumentCount": 5,
    "function": "deposit",
    "kind": "MoveCall",
    "module": "deposit",
    "package": "0x45bae0425e9098ce5cba3d3fa2836220ad24c9f88aa0dffffb5a52b49319fc70",
    "typeArguments": [
      "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf::market_type::MainMarket",
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
    ],
  },
  {
    "kind": "TransferObjects",
    "objectCount": 1,
  },
]
`;

exports[`LendingClient PTB shape populateEnterMarketTxn — correct package, module, args 1`] = `
[
  {
    "argumentCount": 2,
    "function": "enter_market_return",
    "kind": "MoveCall",
    "module": "enter_market",
    "package": "0x45bae0425e9098ce5cba3d3fa2836220ad24c9f88aa0dffffb5a52b49319fc70",
    "typeArguments": [
      "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf::market_type::MainMarket",
    ],
  },
]
`;

exports[`LendingClient PTB shape populateRepayTxn — correct package, module, args, no transfer 1`] = `
[
  {
    "argumentCount": 5,
    "function": "repay",
    "kind": "MoveCall",
    "module": "repay",
    "package": "0x45bae0425e9098ce5cba3d3fa2836220ad24c9f88aa0dffffb5a52b49319fc70",
    "typeArguments": [
      "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf::market_type::MainMarket",
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
    ],
  },
]
`;

exports[`LendingClient PTB shape populateWithdrawTransactionWithAssets — correct package, module, args, no transfer 1`] = `
[
  {
    "argumentCount": 3,
    "function": "refresh_usd_price",
    "kind": "MoveCall",
    "module": "user_oracle",
    "package": "0xec244262968307f6b502f28bbf03aed94140e7467d1638b01a29ec5cc43fd769",
    "typeArguments": [
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
    ],
  },
  {
    "argumentCount": 3,
    "function": "refresh_usd_price",
    "kind": "MoveCall",
    "module": "user_oracle",
    "package": "0xec244262968307f6b502f28bbf03aed94140e7467d1638b01a29ec5cc43fd769",
    "typeArguments": [
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "argumentCount": 7,
    "function": "withdraw",
    "kind": "MoveCall",
    "module": "withdraw",
    "package": "0x45bae0425e9098ce5cba3d3fa2836220ad24c9f88aa0dffffb5a52b49319fc70",
    "typeArguments": [
      "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf::market_type::MainMarket",
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
    ],
  },
]
`;

exports[`LendingClient PTB shape populatedDepositTxn — correct package, module, args, no transfer 1`] = `
[
  {
    "argumentCount": 5,
    "function": "deposit",
    "kind": "MoveCall",
    "module": "deposit",
    "package": "0x45bae0425e9098ce5cba3d3fa2836220ad24c9f88aa0dffffb5a52b49319fc70",
    "typeArguments": [
      "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf::market_type::MainMarket",
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
    ],
  },
]
`;
